--- a/SpanishVocabulary.html
+++ b/SpanishVocabulary.html
@@ -1322,6 +1322,56 @@ SELECT {
 {english:"seated", spanish:"sentado/a",englishPhrase:"they're seated right over there", spanishPhrase:"están sentados justo por allá",module:"module 22",type:"words"},
 {english:"to clean", spanish:"limpiar",englishPhrase:"she never cleans her bedroom", spanishPhrase:"nunca limpia su recámara",module:"module 22",type:"words"},
 {english:"married", spanish:"casado/a",englishPhrase:"she's already married", spanishPhrase:"ya está casada",module:"module 22",type:"words"},
+{english:"to establish", spanish:"establecer",englishPhrase:"first, we establish who is to blame", spanishPhrase:"primero, establecemos quién tiene la culpa",module:"module 23",type:"words"},
+{english:"gold", spanish:"oro (m)",englishPhrase:"a gold necklace", spanishPhrase:"un collar de oro",module:"module 23",type:"words"},
+{english:"secretary", spanish:"secretario/a",englishPhrase:"he's a very good secretary", spanishPhrase:"es un muy buen secretario",module:"module 23",type:"words"},
+{english:"ability", spanish:"habilidad (f)",englishPhrase:"many talents and special abilities", spanishPhrase:"muchos talentos y habilidades especiales",module:"module 23",type:"words"},
+{english:"egg", spanish:"huevo (m)",englishPhrase:"eggs on toast", spanishPhrase:"huevos sobre pan tostado",module:"module 23",type:"words"},
+{english:"edition", spanish:"edición (f)",englishPhrase:"it's the most recent edition", spanishPhrase:"es la edición más reciente",module:"module 23",type:"words"},
+{english:"beginning, start", spanish:"inicio (m)",englishPhrase:"we'll start at the beginning", spanishPhrase:"empezemos por el inicio",module:"module 23",type:"words"},
+{english:"experiment", spanish:"experimento (m)",englishPhrase:"an interesting experiment", spanishPhrase:"un experimento interesante",module:"module 23",type:"words"},
+{english:"brave, courageous", spanish:"valiente",englishPhrase:"a very brave little girl", spanishPhrase:"una niña muy valiente",module:"module 23",type:"words"},
+{english:"password", spanish:"clave (f)",englishPhrase:"what's the password?", spanishPhrase:"¿cuál es la clave?",module:"module 23",type:"words"},
+{english:"width", spanish:"ancho (m)",englishPhrase:"what is the width?", spanishPhrase:"¿cuál es el ancho?",module:"module 23",type:"words"},
+{english:"length, long", spanish:"largo (m)",englishPhrase:"what is the length in inches?", spanishPhrase:"¿cuál es el largo en pulgadas?",module:"module 23",type:"words"},
+{english:"program", spanish:"programa (m)",englishPhrase:"I love this program", spanishPhrase:"me encanta este programa",module:"module 23",type:"words"},
+{english:"chance, opportunity", spanish:"oportunidad (f)",englishPhrase:"it's your last chance", spanishPhrase:"es tu última oportunidad",module:"module 23",type:"words"},
+{english:"judgement", spanish:"juicio (m)",englishPhrase:"the judgement was unfair", spanishPhrase:"el juicio fue injusto",module:"module 23",type:"words"},
+{english:"flower", spanish:"flor (f)",englishPhrase:"flowers in a vase on the table", spanishPhrase:"flores en un vaso sobre la mesa",module:"module 23",type:"words"},
+{english:"curious, strange", spanish:"curioso/a",englishPhrase:"I noticed something strange about him", spanishPhrase:"noté algo curioso de él",module:"module 23",type:"words"},
+{english:"advantage, benefit", spanish:"ventaja (f)",englishPhrase:"can you explain the advantages to me?", spanishPhrase:"¿me puedes explicar las ventajas?",module:"module 23",type:"words"},
+{english:"bread", spanish:"pan (m)",englishPhrase:"the bread is stale", spanishPhrase:"el pan está viejo",module:"module 23",type:"words"},
+{english:"empty", spanish:"vacío/a",englishPhrase:"an empty tin can", spanishPhrase:"una lata vacía",module:"module 23",type:"words"},
+{english:"initial", spanish:"inicial",englishPhrase:"the initial impression was positive", spanishPhrase:"la impresión inicial fue positiva",module:"module 23",type:"words"},
+{english:"absurd", spanish:"absurdo/a",englishPhrase:"an absurd point of view", spanishPhrase:"un absurdo punto de vista",module:"module 23",type:"words"},
+{english:"explosion", spanish:"explosión (f)",englishPhrase:"the explosion killed 3 people", spanishPhrase:"la explosión mató a tres personas",module:"module 23",type:"words"},
+{english:"madness, craziness", spanish:"locura (f)",englishPhrase:"it's pure madness to do it like that", spanishPhrase:"es una locura hacerlo así",module:"module 23",type:"words"},
+{english:"stage, phase", spanish:"fase (f)",englishPhrase:"stage four of the project", spanishPhrase:"fase cuatro del proyecto",module:"module 23",type:"words"},
+{english:"to exaggerate", spanish:"exagerar",englishPhrase:"I don't want to exagerate the story", spanishPhrase:"no quiero exagerar la historia",module:"module 23",type:"words"},
+{english:"percentage", spanish:"porcentaje (m)",englishPhrase:"what percentage of the people want it?", spanishPhrase:"¿qué porcentaje de la gente lo quiere?",module:"module 23",type:"words"},
+{english:"salary", spanish:"salario (m)",englishPhrase:"the salary is not enough considering the risk", spanishPhrase:"el salaraio no es suficiente considerando el riesgo",module:"module 23",type:"words"},
+{english:"torture", spanish:"tortura (f)",englishPhrase:"the trip was torture!", spanishPhrase:"¡el viaje fue una tortura!",module:"module 23",type:"words"},
+{english:"solar", spanish:"solar",englishPhrase:"I'm installing solar panels", spanishPhrase:"voy a instalar paneles solares",module:"module 23",type:"words"},
+{english:"correctly", spanish:"correctamente",englishPhrase:"this time we'll do it correctly", spanishPhrase:"esta vez lo haremos correctamente",module:"module 23",type:"words"},
+{english:"explicit", spanish:"explícito/a",englishPhrase:"the content is explicit", spanishPhrase:"el contenido es explícito",module:"module 23",type:"words"},
+{english:"godfather, godmother", spanish:"padrino (m) madrina (f)",englishPhrase:"my godparents are coming this weekend", spanishPhrase:"mis padrinos están viniendo este fin de semana",module:"module 23",type:"words"},
+{english:"hostility", spanish:"hostilidad (f)",englishPhrase:"what hostility in her voice!", spanishPhrase:"¡qué hostilidad en su voz!",module:"module 23",type:"words"},
+{english:"to review", spanish:"revisar, repasar",englishPhrase:"I need to reivew it first", spanishPhrase:"primero, necesito revisarlo",module:"module 23",type:"words"},
+{english:"rude", spanish:"grosero/a",englishPhrase:"they were very rude to us last night", spanishPhrase:"anoche fueron muy groseros con nosotros",module:"module 23",type:"words"},
+{english:"regulation", spanish:"regulación (f)",englishPhrase:"strict regulations are required", spanishPhrase:"se requieren regulaciones estrictas",module:"module 23",type:"words"},
+{english:"interruption", spanish:"interrupción (f)",englishPhrase:"he continued without interruption", spanishPhrase:"continuó sin interrupción",module:"module 23",type:"words"},
+{english:"to take a bath", spanish:"bañarse",englishPhrase:"she's going to take a bath", spanishPhrase:"se van a bañar",module:"module 23",type:"words"},
+{english:"fly", spanish:"mosca (f)",englishPhrase:"there are flies on the food", spanishPhrase:"hay moscas en la comida",module:"module 23",type:"words"},
+{english:"back (body part)", spanish:"espalda (f)",englishPhrase:"I hurt my back", spanishPhrase:"me lastimé la espalda",module:"module 23",type:"words"},
+{english:"ruin", spanish:"ruina (f)",englishPhrase:"have you been to the mayan ruins in tulum?", spanishPhrase:"¿has estado en las ruinas mayas de tulum?",module:"module 23",type:"words"},
+{english:"dignity", spanish:"dignidad (f)",englishPhrase:"we behaved ourselves with dignity", spanishPhrase:"nos somportamos con dignidad",module:"module 23",type:"words"},
+{english:"reflection", spanish:"reflejo (m) reflexión (f)",englishPhrase:"my reflection in the mirror", spanishPhrase:"mi reflexión en el espejo",module:"module 23",type:"words"},
+{english:"figure, number", spanish:"cifra (f)",englishPhrase:"the figure is incorrect", spanishPhrase:"la cifra es incorrecta",module:"module 23",type:"words"},
+{english:"terrible", spanish:"terrible",englishPhrase:"a terrible accident", spanishPhrase:"un accidente terrible",module:"module 23",type:"words"},
+{english:"happy", spanish:"feliz, contento/a",englishPhrase:"they seem very happy today", spanishPhrase:"parecen muy felices hoy",module:"module 23",type:"words"},
+{english:"sea, ocean", spanish:"mar (m)",englishPhrase:"a house by the sea", spanishPhrase:"una casa junto al mar",module:"module 23",type:"words"},
+{english:"to pay", spanish:"pagar",englishPhrase:"who is going to pay the bill?", spanishPhrase:"¿quién va a pagar la factura?",module:"module 23",type:"words"},
+{english:"to do, to make", spanish:"hacer",englishPhrase:"I'll do it tomorrow", spanishPhrase:"lo haré mañana",module:"module 23",type:"words"},
 {english:"", spanish:"",englishPhrase:"this part of the story is very interesting", spanishPhrase:"esta parte de la historia es muy interesante",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"i can't handle rejection", spanishPhrase:"no puedo manejar el rechazo",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"the tank is full", spanishPhrase:"el tanque está lleno",module:"module 01",type:"phrases"},
@@ -1919,6 +1969,35 @@ SELECT {
 {english:"", spanish:"",englishPhrase:"it's common to see that here", spanishPhrase:"es común ver eso aquí",module:"module 22",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"he has pale lips", spanishPhrase:"tiene los labios pálidos",module:"module 22",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"it doesn't float very well", spanishPhrase:"no flota muy bien",module:"module 22",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"you need a password to open the program", spanishPhrase:"necesitas una clave para abrir el programa",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"I'm happy he did it correctly", spanishPhrase:"estoy feliz que lo hizo correctamente",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's a percentage of my salary", spanishPhrase:"es un porcentaje de mi salario",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's the beginning of the next phase", spanishPhrase:"es el inicio de la próxima fase",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"these new regulations could give us an advantage and many new opportunities", spanishPhrase:"estas nuevas regulaciones podrían darnos una ventaja y muchas opportunidades nuevas",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the secretary apologized for the interruption", spanishPhrase:"la secretaria pidió disculpas por la interrupción",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"a fly was on the bread", spanishPhrase:"una mosca estuvo en el pan",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it happened just before the initial explosion", spanishPhrase:"pasó justo antes la explosión inicial",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they are beautiful flowers that grow by the sea", spanishPhrase:"son flores hermosas que crecen junto al mar",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it was a terrible situation but she was very brave", spanishPhrase:"era una situación terrible pero ella fue muy valiente",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they want to know the width and the length", spanishPhrase:"quieren saber el ancho y el largo",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's absurd to believe I'm going to pay that number", spanishPhrase:"es absurdo creer que voy a pagar esa cifra",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"you're going to hurt your back", spanishPhrase:"te vas a lastimar la espalda",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"sometimes he exaggerates things and makes them worse", spanishPhrase:"a veces exagera las cosas y las hace peor",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's an experiment with solar power", spanishPhrase:"es un experimento con energía solar",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"waiting for the judgement was torture", spanishPhrase:"esperar el juicio fue una tortura",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"are you going to visit the ruins today?", spanishPhrase:"¿vas a visitar las ruinas hoy?",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he saw a curious reflection in the mirror", spanishPhrase:"vió un reflejo curiosa en el espejo",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the machine has the ability to find gold", spanishPhrase:"la máquina tiene la habilidad de econtrar oro",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he lost his dignity", spanishPhrase:"perdió su dignidad",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"are you going to take a bath now?", spanishPhrase:"¿vas a bañarte ahora?",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the hostility they showed us was very rude", spanishPhrase:"la hostilidad que nos mostaron fue muy grosera",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"she is my godmother", spanishPhrase:"ella es mi madrina",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they will have to review the last edition before deciding what to do", spanishPhrase:"tendrán que revisar la última edición antes de decidir qué hacer",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"we need to establish new rules", spanishPhrase:"necesitamos establecer reglas nuevas",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the box is empty", spanishPhrase:"la caja está vacía",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he ate eggs for breakfast", spanishPhrase:"comió huevos para el desayuno",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"this is madness", spanishPhrase:"esto es una locura",module:"module 23",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"she was very explicit with her instructions", spanishPhrase:"era muy explícita con sus instrucciones",module:"module 23",type:"phrases"},
     ],
     }
     }
