--- a/vocabulary/index.html
+++ b/vocabulary/index.html
@@ -16,16 +16,20 @@
     <meta name="msapplication-starturl" content="/index.html">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <link rel="icon" sizes="128x128" href="/icons/ds-192x192.png">
-    <link rel="apple-touch-icon" sizes="128x128" href="/icons/apple-touch-icon.png">
-    <link rel="icon" sizes="192x192" href="/icons/icon-192x192.png">
-    <link rel="apple-touch-icon" sizes="192x192" href="/icons/apple-touch-icon.png">
-    <link rel="icon" sizes="256x256" href="/icons/ds-512x512.png">
-    <link rel="apple-touch-icon" sizes="256x256" href="/icons/apple-touch-icon.png">
-    <link rel="icon" sizes="384x384" href="/icons/ds-512x512.png">
-    <link rel="apple-touch-icon" sizes="384x384" href="/icons/apple-touch-icon.png">
-    <link rel="icon" sizes="512x512" href="/icons/ds-512x512.png">
-    <link rel="apple-touch-icon" sizes="512x512" href="/icons/apple-touch-icon.png">
+    <link rel="shortcut icon" href="icons/favicon.ico">
+    <link rel="icon" type="image/png" href="icons/ds-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="icons/ds-32x32.png" sizes="32x32">
+
+    <link rel="icon" sizes="128x128" href="icons/ds-128x128.png">
+    <link rel="apple-touch-icon" sizes="128x128" href="icons/ds-128x128.png">
+    <link rel="icon" sizes="192x192" href="icons/ds-192x192.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="icons/ds-192x192.png">
+    <link rel="icon" sizes="256x256" href="icons/ds-256x256.png">
+    <link rel="apple-touch-icon" sizes="256x256" href="icons/ds-256x256.png">
+    <link rel="icon" sizes="384x384" href="icons/ds-384x384.png">
+    <link rel="apple-touch-icon" sizes="384x384" href="icons/ds-384x384.png">
+    <link rel="icon" sizes="512x512" href="icons/ds-512x512.png">
+    <link rel="apple-touch-icon" sizes="512x512" href="icons/ds-512x512.png">
 
     <title>Spanish Vocabulary Flashcards</title>
 
