--- a/agc/index.html
+++ b/agc/index.html
@@ -42,9 +42,15 @@
         -ms-user-select: none;
         user-select: none;
       }
-
+      .cardlink a {
+          text-decoration: none;
+          color: #333;
+      }
+      .cardlink a:hover {
+          color: #009;
+      }
       .agclogo {
-        height: 25px;
+        height: 35px;
       }
       @media (min-width: 768px) {
         .bd-placeholder-img-lg {
@@ -67,14 +73,14 @@
       </button>
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#" @click="doShowSettings()">
-          <svg class="bi" width="32" height="32" fill="currentColor" aria-labelledby="title">
-            <title id="title" lang="en">Settings</title>
-            <use xlink:href="bootstrap-icons.svg#gear"/>
-          </svg>
-        </span></a>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle form-control-lg" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">CONTENT</a>
+        <div x-model="currContentSelected" class="dropdown-menu" aria-labelledby="dropdown01">
+          <a class="dropdown-item" href="#" data-value="News" @click="doShowArticles()">News</a>
+          <a class="dropdown-item" href="#" data-value="Tournaments" @click="doShowTournaments()">Tournaments</a>
+          <a class="dropdown-item" href="#" data-value="Courses" @click="doShowCourses()">Courses</a>
+        </div>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">
@@ -92,13 +98,13 @@
           </svg>
         </span></a>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle form-control-lg" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">CONTENT</a>
-        <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="#" @click="doShowArticles()">News</a>
-          <a class="dropdown-item" href="#" @click="doShowTournaments()">Tournaments</a>
-          <a class="dropdown-item" href="#" @click="doShowCourses()">Courses</a>
-        </div>
+      <li class="nav-item">
+        <a class="nav-link" href="#" @click="doShowSettings()">
+          <svg class="bi" width="32" height="32" fill="currentColor" aria-labelledby="title">
+            <title id="title" lang="en">Settings</title>
+            <use xlink:href="bootstrap-icons.svg#gear"/>
+          </svg>
+        </span></a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -140,18 +146,17 @@
       <p class="card-text">Welcome.  You are running a demo of the Amateurgolf.com Web App.</p>
     </div>
   </div>
-  <div class="container"><div class="row row-cols-3">
+  <div class="container cardlink"><div class="row row-cols-3">
     <template x-for="item in activeArticleList">
-      <div class="col card" style="padding:0; width:100%;border-radius:5px;margin-bottom:10px;">
-        <img x-bind:src="getImageURL(item.imageURL)" class="card-img-top" style="width:100%; height:120px; object-fit: cover;" alt="">
+      <a href="#" @click="alert(item.title)">
+      <div class="col card" style="padding:0; width:100%;height:100%;border-radius:8px;margin-bottom:10px;">
+        <img x-bind:src="getImageURL(item.imageURL)" class="card-img-top" style="width:100%; height:125px; object-fit: cover;" alt="">
         <div class="card-body" id="homeIntro">
           <h6 class="card-title" x-text="item.title" style="font-weight:600;"></h5>
           <p class="card-text" x-text="getHTMLText(item.teaser)"></p>
         </div>
-        <div class="card-footer">
-          <a href="#" class="card-link">View Article</a>
-        </div>
       </div>
+      </a>
     </template>  
   </div></div>
 </div>
@@ -231,6 +236,7 @@
                 dbArticleCount: 0,
                 dbCoursesCount: 0,
                 dbTournamentsCount: 0,
+                currContentSelected: "",
           doHideAllWindows() {
             this.showHome = false;
             this.showIntro = false;
@@ -242,14 +248,17 @@
           },
           doShowCourses() {
             this.doHideAllWindows();
+            this.currContentSelected = "Courses";
             this.showCourses = true;
           },
           doShowArticles() {
             this.doHideAllWindows();
+            this.currContentSelected = "News";
             this.showArticles = true;
           },
           doShowTournaments() {
             this.doHideAllWindows();
+            this.currContentSelected = "Tournaments";
             this.showTournaments = true;  
           },
           doShowSettings() {
