--- a/barbell/index.html
+++ b/barbell/index.html
@@ -69,7 +69,8 @@
 		  		<h1>Lateral Raise</h1>
 				<div style="padding: 15px; text-align: left;">
           	  	<p style="padding-bottom: 10px; text-align:left;">Stand holding a dumbbell in each hand next to your outer thighs. Keep your back straight and slowly lift the weights out to the sides until your arms are parallel with the floor. Your elbows should be slightly bent. Slowly lower the dumbbells back to the starting position.</p>
-			  	  <p style="padding-bottom: 10px; text-align:left;">“Lateral raises target the medial (outer) head of the deltoid muscle,” says Nyman. “You don’t need an awful lot of core strength to perform the movement, which is why it’s good for beginners.</p>
+			  	  <p style="padding-bottom: 10px; text-align:left;">“Lateral raises target the medial (outer) head of the deltoid muscle,” says Nyman. “You don’t need an awful lot of core strength to perform the movement, which is why it’s good for beginners.
+</p>
 			 	   <p style="padding-bottom: 10px; text-align:left;">“Imagine you are holding a bucket in each hand. As you raise your arms out to the side, tip the buckets as if to pour out the contents so that your thumbs point to the floor. This will ensure you hit the medial head as opposed to over-developing the front delt.”</p>	
 				</div>  
 		</div>
@@ -86,9 +87,12 @@
 		  <div>
 		  		<h1>Biceps Curl</h1>
 				<div style="padding: 15px; text-align: left;">
-					<p style="padding-bottom: 10px; text-align:left;">Hold a pair of dumbbells in front of your thighs with your palms facing out. Slowly curl the dumbbells up to your chest and then back down again.</p>
-					<p style="padding-bottom: 10px; text-align:left;">“Keep your elbows pinned to your sides,” says Nyman. “The minute your elbow comes up you are shifting the emphasis away from your biceps and onto your shoulders.</p>
-					<p style="padding-bottom: 10px; text-align:left;">"If you’re a beginner you may be wary of picking up heavy weights. With biceps curls you won’t need to worry about that because it’s not about going heavy, it’s about the feel of the muscle lengthening and shortening. You can change grip to target different heads of the muscle but for a beginner I’d recommend using a supinated grip – palms facing up.”</p>
+					<p style="padding-bottom: 10px; text-align:left;">Hold a pair of dumbbells in front of your thighs with your palms facing out. Slowly curl the dumbbells up to your chest and then back down again.
+</p>
+					<p style="padding-bottom: 10px; text-align:left;">“Keep your elbows pinned to your sides,” says Nyman. “The minute your elbow comes up you are shifting the emphasis away from your biceps and onto your shoulders.
+</p>
+					<p style="padding-bottom: 10px; text-align:left;">"If you’re a beginner you may be wary of picking up heavy weights. With biceps curls you won’t need to worry about that because it’s not about going heavy, it’s about the feel of the muscle lengthening and shortening. You can change grip to target different heads of the muscle but for a beginner I’d recommend using a supinated grip – palms facing up.”
+</p>
 				</div>  
 		</div>
 		</amp-story-grid-layer>
@@ -104,7 +108,8 @@
 		  <div>
 		  		<h1>Triceps Kickback</h1>
 				<div style="padding: 15px; text-align: left;">
-					<p style="padding-bottom: 10px; text-align:left;">Pair this move with the biceps curl to ensure you’re working both of the major muscle groups in your upper arm. Like the biceps curl, the triceps kick-back is an isolation move, in that it targets solely the triceps.</p>
+					<p style="padding-bottom: 10px; text-align:left;">Pair this move with the biceps curl to ensure you’re working both of the major muscle groups in your upper arm. Like the biceps curl, the triceps kick-back is an isolation move, in that it targets solely the triceps.
+</p>
 					<p style="padding-bottom: 10px; text-align:left;">Set up a bench so you can place one knee, shin and foot on it, and then bend over until your torso is parallel to the floor, holding the bench with one hand. In the other hand, hold a dumbbell and place your upper arm against your body with your elbow bent at 90°. Straighten your arm, moving the dumbbell backwards until your forearm is parallel to the ground, making sure to keep your upper arm still so you’re only using your triceps for the lift. Slowly lower the weight back to the start.</p>
 				</div>  
 		</div>
@@ -246,7 +251,24 @@
 		</amp-story-grid-layer>
 		</amp-story-page>
 		
-		
+		<amp-story-page id="13-arnold-press">
+      <amp-story-grid-layer template="thirds">
+        <amp-img grid-area="upper-third"
+                 src="./images/13-arnold-press.jpg"
+                 width="620" height="347"
+                             layout="responsive">
+        </amp-img>
+    <div>
+        <h1>Arnold Press</h1>
+      <div style="padding: 15px; text-align: left;">
+        <p style="padding-bottom: 10px; text-align:left;">Everyone starts to think they’re the Terminator after a few good lifting sessions, so here’s a move the Terminator himself made famous. The Arnold Press works all three sections of your deltoids – or,machine-gun stabilisers, as we’re sure the The Austrian Oak refers to them – and keeps your muscles under tension for longer than a standard overhead press.</p>
+        <p style="padding-bottom: 10px; text-align:left;">Stand holding dumbbells in front of your chest using an underhand grip, as though you’re midway through a biceps curl. Open your arms out to the sides while rotating your wrists 180° then, without pausing, press the dumbbells above your head.</p>
+      </div>  
+  </div>
+  </amp-story-grid-layer>
+  </amp-story-page>
+
+    
       <!-- A "bookend" panel containing links to other resources will appear on the last page of your story if you include an `amp-story-bookend` that references a [bookend JSON config](/static/samples/json/bookend.json). -->
       <amp-story-bookend src="<% hosts.platform %>/static/samples/json/bookend.json" layout="nodisplay">
       </amp-story-bookend>
